# blog_project

./: README.md  db.sqlite3  pyproject.toml
blog/: models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20201216_0209.py  0003_auto_20201216_0217.py  0004_delete_author.py
blog_project/: settings.py
static/: base.css
styles/: styles.css
templates/: base.html  create_blog.html  delete_blog.html  home.html  post_detail.html  update_blog.html
